--- a/TA_Clf_Models_ExplainedV4.ipynb
+++ b/TA_Clf_Models_ExplainedV4.ipynb
@@ -3087,7 +3087,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Define your RandomForestClassifier with specified parameters\n",
+        "# Define your clf with specified parameters\n",
         "xgb = XGBClassifier(learning_rate= 0.2, max_depth= 5, min_child_weight= 1, n_estimators= 10,subsample=0.3, random_state=42)\n",
         "\n",
         "# Fit the classifier on the training data\n",
@@ -3385,7 +3385,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Define your RandomForestClassifier with specified parameters\n",
+        "# Define your clf with specified parameters\n",
         "svm = SVC(C= 100,gamma= 0.1, kernel='rbf', random_state=42)\n",
         "\n",
         "# Fit the classifier on the training data\n",
@@ -3651,7 +3651,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Define your RandomForestClassifier with specified parameters\n",
+        "# Define your clfr with specified parameters\n",
         "knn = KNeighborsClassifier(algorithm= 'auto', n_neighbors= 1, weights= 'uniform')\n",
         "\n",
         "# Fit the classifier on the training data\n",
